test/deprecated/constructorError/hasConstructor2.good
hasConstructor2.chpl:6: error: Type 'Foo' defined a constructor here
